[gd_scene load_steps=20 format=2]

[ext_resource path="res://Enemies/Dungeon/OldMan/wizzard_m_run_anim_f2.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Dungeon/OldMan/wizzard_m_run_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Dungeon/OldMan/wizzard_m_run_anim_f3.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Dungeon/OldMan/wizzard_m_idle_anim_f0.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Dungeon/OldMan/wizzard_m_run_anim_f0.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Dungeon/OldMan/PlayingCardBack.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Dungeon/OldMan/OldManBoss.gd" type="Script" id=7]
[ext_resource path="res://Enemies/Dungeon/OldMan/SwordCard.png" type="Texture" id=8]
[ext_resource path="res://Enemies/Dungeon/OldMan/ShieldBubble.png" type="Texture" id=9]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=10]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 28 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "walking",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 16.8828

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.952941, 0.921569, 0.921569, 0.427451 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.298039, 0.803922, 0.305882, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 8.0
height = 10.0

[node name="OldManBoss" type="Node2D"]
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="Shield" type="StaticBody2D" parent="."]
position = Vector2( 1.90735e-06, 5 )
scale = Vector2( 1.71875, 1.71875 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
shape = SubResource( 3 )

[node name="ShieldSprite" type="Sprite" parent="Shield"]
texture = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 46.0
margin_top = 145.0
margin_right = 101.0
margin_bottom = 165.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Shuffle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShuffleCard" type="Sprite" parent="CanvasLayer"]
position = Vector2( 23, 155 )
scale = Vector2( 1, 1.25 )
texture = ExtResource( 6 )

[node name="PhaseCard" type="Sprite" parent="CanvasLayer"]
position = Vector2( -19, 111 )
texture = ExtResource( 8 )

[node name="FlameTimer" type="Timer" parent="."]

[node name="FireSort" type="YSort" parent="."]

[node name="SpitterSort" type="YSort" parent="."]

[node name="SpitterTimer" type="Timer" parent="."]

[node name="SwordTimer" type="Timer" parent="."]

[node name="CardTarget" type="Node2D" parent="."]
position = Vector2( 26, 111 )

[node name="PhaseTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]

[node name="Stats" parent="." instance=ExtResource( 10 )]

[node name="Hurtbox" parent="." instance=ExtResource( 11 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 5 )
shape = SubResource( 8 )
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="FlameTimer" to="." method="_on_FlameTimer_timeout"]
[connection signal="timeout" from="SpitterTimer" to="." method="_on_SpitterTimer_timeout"]
[connection signal="timeout" from="SwordTimer" to="." method="_on_SwordTimer_timeout"]
[connection signal="timeout" from="PhaseTimer" to="." method="_on_PhaseTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
